// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas event data HTML event "contextmenu" should fire a corresponding canvas event 1`] = `
[
  [
    "contextmenu:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "contextmenu",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "dblclick" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:dblclick",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "drag" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "drag",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "dragend" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "dragend",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "didDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "dragenter" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "dragenter",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "dragSource": "Drag Target",
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "drag:enter",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "dragSource": "Drag Target",
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "previousTarget": undefined,
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "dragleave" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "dragleave",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "dragSource": "Drag Target",
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "dragover" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "dragover",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "canDrop": true,
      "dragSource": "Drag Target",
      "dropTarget": "Drag Target",
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "drag:enter",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "canDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "previousTarget": undefined,
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "drop" should fire a corresponding canvas event 1`] = `
[
  [
    "dragstart",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "drop:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "didDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "drop",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "didDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "drop:after",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "didDrop": false,
      "dragSource": "Drag Target",
      "dropTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": "Drag Target",
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "mousedown" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:down:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "mouse:down",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "mouseenter" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:over",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "mouseleave" should fire a corresponding canvas event 1`] = `[]`;

exports[`Canvas event data HTML event "mousemove" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:move:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "mouse:move",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "mouseout" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:out",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "mouseover" should fire a corresponding canvas event 1`] = `[]`;

exports[`Canvas event data HTML event "mouseup" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:up:before",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "currentSubTargets": [],
      "currentTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": true,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
  [
    "mouse:up",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "currentSubTargets": [],
      "currentTarget": undefined,
      "e": MouseEvent {
        "isTrusted": false,
      },
      "isClick": true,
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Canvas event data HTML event "wheel" should fire a corresponding canvas event 1`] = `
[
  [
    "mouse:wheel",
    {
      "absolutePointer": Point {
        "x": -30,
        "y": -13,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 50,
        "y": 50,
      },
      "scenePoint": Point {
        "x": -30,
        "y": -13,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 50,
        "y": 50,
      },
    },
  ],
]
`;

exports[`Event targets should fire mouse over/out events on target 1`] = `
[
  [
    "mousemove:before",
    {
      "absolutePointer": Point {
        "x": 5,
        "y": 5,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 5,
        "y": 5,
      },
      "scenePoint": Point {
        "x": 5,
        "y": 5,
      },
      "subTargets": [],
      "target": "target",
      "transform": undefined,
      "viewportPoint": Point {
        "x": 5,
        "y": 5,
      },
    },
  ],
  [
    "mouseover",
    {
      "absolutePointer": Point {
        "x": 5,
        "y": 5,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 5,
        "y": 5,
      },
      "previousTarget": undefined,
      "scenePoint": Point {
        "x": 5,
        "y": 5,
      },
      "subTargets": [],
      "target": "target",
      "transform": undefined,
      "viewportPoint": Point {
        "x": 5,
        "y": 5,
      },
    },
  ],
  [
    "mousemove",
    {
      "absolutePointer": Point {
        "x": 5,
        "y": 5,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 5,
        "y": 5,
      },
      "scenePoint": Point {
        "x": 5,
        "y": 5,
      },
      "subTargets": [],
      "target": "target",
      "transform": undefined,
      "viewportPoint": Point {
        "x": 5,
        "y": 5,
      },
    },
  ],
  [
    "mouseout",
    {
      "absolutePointer": Point {
        "x": 20,
        "y": 20,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "nextTarget": undefined,
      "pointer": Point {
        "x": 20,
        "y": 20,
      },
      "scenePoint": Point {
        "x": 20,
        "y": 20,
      },
      "subTargets": [],
      "target": "target",
      "transform": undefined,
      "viewportPoint": Point {
        "x": 20,
        "y": 20,
      },
    },
  ],
]
`;

exports[`Event targets should fire mouse over/out events on target 2`] = `
[
  [
    "mouse:move:before",
    {
      "absolutePointer": Point {
        "x": 5,
        "y": 5,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 5,
        "y": 5,
      },
      "scenePoint": Point {
        "x": 5,
        "y": 5,
      },
      "subTargets": [],
      "target": "target",
      "transform": undefined,
      "viewportPoint": Point {
        "x": 5,
        "y": 5,
      },
    },
  ],
  [
    "mouse:over",
    {
      "absolutePointer": Point {
        "x": 5,
        "y": 5,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 5,
        "y": 5,
      },
      "previousTarget": undefined,
      "scenePoint": Point {
        "x": 5,
        "y": 5,
      },
      "subTargets": [],
      "target": "target",
      "transform": undefined,
      "viewportPoint": Point {
        "x": 5,
        "y": 5,
      },
    },
  ],
  [
    "mouse:move",
    {
      "absolutePointer": Point {
        "x": 5,
        "y": 5,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 5,
        "y": 5,
      },
      "scenePoint": Point {
        "x": 5,
        "y": 5,
      },
      "subTargets": [],
      "target": "target",
      "transform": undefined,
      "viewportPoint": Point {
        "x": 5,
        "y": 5,
      },
    },
  ],
  [
    "mouse:move:before",
    {
      "absolutePointer": Point {
        "x": 20,
        "y": 20,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 20,
        "y": 20,
      },
      "scenePoint": Point {
        "x": 20,
        "y": 20,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 20,
        "y": 20,
      },
    },
  ],
  [
    "mouse:out",
    {
      "absolutePointer": Point {
        "x": 20,
        "y": 20,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "nextTarget": undefined,
      "pointer": Point {
        "x": 20,
        "y": 20,
      },
      "scenePoint": Point {
        "x": 20,
        "y": 20,
      },
      "subTargets": [],
      "target": "target",
      "transform": undefined,
      "viewportPoint": Point {
        "x": 20,
        "y": 20,
      },
    },
  ],
  [
    "mouse:move",
    {
      "absolutePointer": Point {
        "x": 20,
        "y": 20,
      },
      "e": MouseEvent {
        "isTrusted": false,
      },
      "pointer": Point {
        "x": 20,
        "y": 20,
      },
      "scenePoint": Point {
        "x": 20,
        "y": 20,
      },
      "subTargets": [],
      "target": undefined,
      "transform": undefined,
      "viewportPoint": Point {
        "x": 20,
        "y": 20,
      },
    },
  ],
]
`;
